// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoneFound /> should render with [noun='files' 1`] = `
<NoneFound__StyledNoneFound>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
  />
   No 
  files
   found
</NoneFound__StyledNoneFound>
`;

exports[`<NoneFoundBox /> should render with [noun='boxes' 1`] = `
<NoneFound__StyledNoneFoundBox
  as={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "baseHash": 404897837,
        "componentId": "Box-x49ol5-0",
        "isStatic": false,
        "rules": Array [
          "border:",
          [Function],
          " solid;border-radius:",
          [Function],
          ";box-sizing:border-box;cursor:",
          [Function],
          ";margin-bottom:15px;padding:10px 15px;position:relative;&:hover{",
          [Function],
          "}",
        ],
        "staticRulesId": "",
      },
      "displayName": "Box",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Box-x49ol5-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
  />
   No 
  boxes
   found
</NoneFound__StyledNoneFoundBox>
`;

exports[`<NoneFoundSection /> should render with [noun='sections' 1`] = `
<NoneFound__StyledNoneFoundSection>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
  />
   No 
  sections
   found
</NoneFound__StyledNoneFoundSection>
`;

exports[`<NoneFoundSection /> should render with [noun='sections'] and children 1`] = `
<NoneFound__StyledNoneFoundSection>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
  />
   No 
  sections
   found
  <span>
    . 
    <span>
      foo
    </span>
    .
  </span>
</NoneFound__StyledNoneFoundSection>
`;
